2017-03-16  Mark Lam  <mark.lam@apple.com>

        The new array with spread operation needs to check for length overflows.
        https://bugs.webkit.org/show_bug.cgi?id=169780
        <rdar://problem/31072182>

        Reviewed by Filip Pizlo.

        * dfg/DFGOperations.cpp:
        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::compileNewArrayWithSpread):
        * ftl/FTLLowerDFGToB3.cpp:
        (JSC::FTL::DFG::LowerDFGToB3::compileNewArrayWithSpread):
        * ftl/FTLOperations.cpp:
        (JSC::FTL::operationMaterializeObjectInOSR):
        * llint/LLIntSlowPaths.cpp:
        * runtime/CommonSlowPaths.cpp:
        (JSC::SLOW_PATH_DECL):
        * runtime/JSGlobalObject.cpp:

2017-03-16  Yusuke Suzuki  <utatane.tea@gmail.com>

        Unreviewed, copy m_numberOfArgumentsToSkip
        https://bugs.webkit.org/show_bug.cgi?id=164582

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::CodeBlock):

2017-03-16  Yusuke Suzuki  <utatane.tea@gmail.com>

        Unreviewed, fix numParameter() - 1 OSRExit materialization
        https://bugs.webkit.org/show_bug.cgi?id=164582

        When materializing rest parameters, we rely on that numParameter() - 1 equals to
        the numberOfArgumentsToSkip. But this assumption is broken in r214029.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::finishCreation):
        * bytecode/CodeBlock.h:
        (JSC::CodeBlock::numberOfArgumentsToSkip):
        * ftl/FTLOperations.cpp:
        (JSC::FTL::operationMaterializeObjectInOSR):

2017-03-15  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC] Default parameter part should be retrieved by op_get_argument opcode instead of changing arity
        https://bugs.webkit.org/show_bug.cgi?id=164582

        Reviewed by Saam Barati.

        Previously we implement the default parameters as follows.

            1. We count the default parameters as the usual parameters.
            2. We just get the argument register.